--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css u">
+    <link rel="stylesheet" href="style.css">
     <title>Ark Studio</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <div class="nav-data">
                 <div class="nav-logo">
                     <img src="img/logo(1).png" alt="logo-img">
-                    </div>
+                </div>
                     <div class="navbar-list">
                         <ul class="nav-item">
                             <li><a href="#">Our Story</a></li>
@@ -26,5 +26,95 @@
             </div>
         </div>
     </section>
+
+
+    <section class="banner-para">
+        <div class="banner-text">
+            <p>Have A project in mind? We would love to hear from you!</p>
+        </div>
+        <div class="banner-btn">
+            <input type="submit" value="GET IN TOUCH WITH US">
+        </div>
+    </section> 
+
+
+    <section class="studio-data">
+        <div class="header">
+            <h1>We are ARK Studio,we make awesome stuff.</h1>
+        </div>
+
+        <div class="aboutus-container">
+            <div class="about-list">
+                <img src="img/s1.png.png" alt="">
+                <h3>Slamco laboris velitesse</h3>
+                <p>sed do eiusmod tempor incididunt uto <br>
+                    abore dolore magna aliqua enim minim <br>
+                    veniam</p>
+            </div>
+            <div class="about-list">
+                <img src="img/s2.png.png" alt="">
+                <h3>Slamco laboris velitesse</h3>
+                <p>sed do eiusmod tempor incididunt uto <br>
+                    abore dolore magna aliqua enim minim <br>
+                    veniam</p>
+            </div>
+            <div class="about-list">
+                <img src="img/s3.png.png" alt="">
+                <h3>Slamco laboris velitesse</h3>
+                <p>sed do eiusmod tempor incididunt uto <br>
+                    abore dolore magna aliqua enim minim <br>
+                    veniam</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="img-list">
+        <img src="img/Copy_of_us_4(2).PNG" alt="">
+    </section>
+
+
+    <section class="testimonials-data">
+        <div class="header-T">
+            <h1>testimonials</h1>
+        </div>
+
+        <div class="testimonials-container">
+            <div class="testimonials-list">
+                <img src="img/client1.jpg" alt="">
+                <h4>John Doe / <span class="role">Manager</span></h4>
+                <p>Duis aute irure dolor in reprehendent in <br>
+                voluptate velit cillum dolore eu fugiat <br>
+                 nulla pariature sint occaecat cupidatat.</p>
+            </div>
+            <div class="testimonials-list">
+                <img src="img/client2.jpg" alt="">
+                <h4>John Doe / <span class="role">UI Designer</span></h4>
+                <p>Duis aute irure dolor in reprehendent in <br>
+                voluptate velit cillum dolore eu fugiat <br>
+                 nulla pariature sint occaecat cupidatat.</p>
+            </div>
+            <div class="testimonials-list">
+                <img src="img/client3.jpg" alt="">
+                <h4>John Doe / <span class="role">SEO Expert</span></h4>
+                <p>Duis aute irure dolor in reprehendent in <br>
+                voluptate velit cillum dolore eu fugiat <br>
+                 nulla pariature sint occaecat cupidatat.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="logo">
+        <div class="brand-logo">
+            <img src="img/client_logo.png" alt="brand-logo">
+            <img src="img/client_logo.png" alt="brand-logo">
+            <img src="img/client_logo.png" alt="brand-logo">
+            <img src="img/client_logo.png" alt="brand-logo">
+            <img src="img/client_logo.png" alt="brand-logo">
+        </div>
+    </section>
+
+    
 </body>
 </html>
