--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Have A project in mind? We would love to hear from you!</p>
         </div>
         <div class="banner-btn">
-            <input type="submit" value="GET IN TOUCH WITH US">
+            <button type="button" class="btn_1">GET IN TOUCH WITH US</button>
         </div>
     </section> 
 
@@ -69,8 +69,12 @@
     </section>
 
 
-    <section class="img-list">
-        <img src="img/Copy_of_us_4(2).PNG" alt="">
+    <section class="flex-services">
+        <img src="img/w1.jpg" alt="img_service">
+        <img src="img/w2.jpg" alt="img_service">
+        <img src="img/w3.jpg" alt="img_service">
+        <img src="img/w4.jpg" alt="img_service">
+        <img src="img/w5.jpg" alt="img_service">
     </section>
 
 
@@ -114,6 +118,60 @@
             <img src="img/client_logo.png" alt="brand-logo">
         </div>
     </section>
+
+
+    <section class="footer-container">
+        <div class="footer-text">
+            <p class="text">Have a project in mind? We would love to hear from you!</p>
+        </div>
+        <div class="footer_btn">
+            <button type="button" class="btn_2">GET IN TOUCH WITH US</button>
+        </div>
+
+        <div class="footer-details">
+            <div class="location">
+                <h2>Location</h2>
+                <p>3301 NEW Mexico Avenue <br>
+                    Washington, DC 20016 <br>
+                    (202) 537-0787 <br>
+                </p>
+                <div class="social-media">
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/i/flow/login" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
+            </div>
+            <div class="company">
+                <h2>Company</h2>
+                <ul>
+                    <li>Our Story</li>
+                    <li>Mission</li>
+                    <li>Journal</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+            <div class="support">
+                <h2>Support</h2>
+                <ul>
+                    <li>FAQ</li>
+                    <li>Contact us</li>
+                    <li>Policies</li>
+                </ul>
+            </div>
+            <div class="ARK">
+                <h2>ARK Studio</h2>
+                <p>Excepteur sint occaecat cupidatat <br>
+                   non proident, sunt in culpa qui <br>
+                 officia est eserunt mollit anim <br>
+                 laborum</p>
+            </div>
+        </div>
+
+        <div class="copy_rights">
+            <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
+        </div>
+    </section>
+
 
     
 </body>
