--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
 
     <section class="testimonials-data">
         <div class="header-T">
-            <h1>testimonials</h1>
+            <h1>Testimonials</h1>
         </div>
 
         <div class="testimonials-container">
             <div class="testimonials-list">
-                <img src="img/client1.jpg" alt="">
-                <h4>John Doe / <span class="role">Manager</span></h4>
+                <img src="img/client1.jpg" class="client_img" alt="">
+                <h4 class="position">Eliza / <span class="role">Manager</span></h4>
                 <p>Duis aute irure dolor in reprehendent in <br>
                 voluptate velit cillum dolore eu fugiat <br>
                  nulla pariature sint occaecat cupidatat.</p>
             </div>
             <div class="testimonials-list">
-                <img src="img/client2.jpg" alt="">
-                <h4>John Doe / <span class="role">UI Designer</span></h4>
+                <img src="img/client2.jpg" class="client_img" alt="">
+                <h4 class="position">John Doe / <span class="role">UI Designer</span></h4>
                 <p>Duis aute irure dolor in reprehendent in <br>
                 voluptate velit cillum dolore eu fugiat <br>
                  nulla pariature sint occaecat cupidatat.</p>
             </div>
             <div class="testimonials-list">
-                <img src="img/client3.jpg" alt="">
-                <h4>John Doe / <span class="role">SEO Expert</span></h4>
+                <img src="img/client3.jpg" class="client_img" alt="">
+                <h4 class="position">Micheal / <span class="role">SEO Expert</span></h4>
                 <p>Duis aute irure dolor in reprehendent in <br>
                 voluptate velit cillum dolore eu fugiat <br>
                  nulla pariature sint occaecat cupidatat.</p>
@@ -120,59 +120,60 @@
     </section>
 
 
-    <section class="footer-container">
+    <section class="footer-data">
         <div class="footer-text">
-            <p class="text">Have a project in mind? We would love to hear from you!</p>
+            <p>Have A project in mind? We would love to hear from you!</p>
         </div>
-        <div class="footer_btn">
+        <div class="footer-btn">
             <button type="button" class="btn_2">GET IN TOUCH WITH US</button>
-        </div>
-
-        <div class="footer-details">
-            <div class="location">
-                <h2>Location</h2>
-                <p>3301 NEW Mexico Avenue <br>
-                    Washington, DC 20016 <br>
-                    (202) 537-0787 <br>
-                </p>
-                <div class="social-media">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/i/flow/login" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                </div>
-            </div>
-            <div class="company">
-                <h2>Company</h2>
-                <ul>
-                    <li>Our Story</li>
-                    <li>Mission</li>
-                    <li>Journal</li>
-                    <li>Careers</li>
-                </ul>
-            </div>
-            <div class="support">
-                <h2>Support</h2>
-                <ul>
-                    <li>FAQ</li>
-                    <li>Contact us</li>
-                    <li>Policies</li>
-                </ul>
-            </div>
-            <div class="ARK">
-                <h2>ARK Studio</h2>
-                <p>Excepteur sint occaecat cupidatat <br>
-                   non proident, sunt in culpa qui <br>
-                 officia est eserunt mollit anim <br>
-                 laborum</p>
-            </div>
-        </div>
-
-        <div class="copy_rights">
-            <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
         </div>
     </section>
 
 
+    <section class="footer-container">
+        <div class="location">
+            <h2 class="info">Location</h2>
+            <p class="address">3301 New Mexico Avenue <br>
+                Washington, DC 20016 <br>
+                (202) 537-0787 <br>
+            </p>
+            <div class="icons">
+                <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+        <div class="company">
+            <h2 class="info_1">Company</h2>
+            <ul class="address">
+                <li>our story</li>
+                <li>mission</li>
+                <li>journal</li>
+                <li>careers</li>
+            </ul>
+        </div>
+        <div class="support">
+            <h2 class="info_2">Support</h2>
+            <ul class="contact">
+                <li>FAQ</li>
+                <li>Contact US</li>
+                <li>Policies</li>
+            </ul>
+        </div>
+        <div class="ARK">
+            <h2 class="info">ARK Studio</h2>
+            <p class="address">Excepteur sint occaecat cupidatat <br>
+                non proident, sunt in culpa qui <br>
+                officia est eserunt mollit anim <br>
+                laborum. </p>
+        </div>
+    </div>
+        <div class="copy-rights">
+            <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
+        </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/899b989fe2.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
