--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@
                 laborum. </p>
         </div>
     </div>
-        <div class="copy-rights">
-            <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
-        </div>
-    </section>
+</section>
+
+<section class="copy-rights">
+    <p>&copy; 2014 ARK Studio - All Rights Reserved</p>
+</section>
 
     <script src="https://kit.fontawesome.com/899b989fe2.js" crossorigin="anonymous"></script>
     
